compiler/tests/fixtures/invalid/semantics/association_role_undefined.viv
// Invalid: undefined role in associations

action bad-assoc:
    roles:
        @actor:
            as: initiator
    associations:
        roles:
            @ghost: friendship
